[project]
name = "surf-alerts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = [
    "packages/cli",
    "packages/jobs/dispatcher",
    "packages/jobs/spot_reconciler",
    "packages/migrations/archive_legacy_data",
    "packages/scrapers/forecast_scraper",
    "packages/scrapers/sitemap_scraper",
    "packages/scrapers/taxonomy_scraper",
    "packages/scrapers/spot_scraper",
]

[tool.uv.sources]
cli = { workspace = true }
forecast-scraper = { workspace = true }
sitemap-scraper = { workspace = true }
taxonomy-scraper = { workspace = true }
spot-reconciler = { workspace = true }
spot-scraper = { workspace = true }

[dependency-groups]
dev = [
    "cli",
    "forecast-scraper",
    "sitemap-scraper",
    "taxonomy-scraper",
    "spot-reconciler",
    "spot-scraper",
    "moto>=5.1.19",
    "pytest>=9.0.2",
    "rich>=14.2.0",
]

[tool.ruff]
line-length = 100 

[tool.pytest.ini_options]
env = [
  "POWERTOOLS_LOG_LEVEL=INFO",
]
python_files = "test_*.py"
