[project]
name = "surf-alerts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = [
    "packages/cli",
    "packages/jobs/discovery_catalog_builder",
    "packages/jobs/discovery_completion",
    "packages/jobs/discovery_diff",
    "packages/jobs/dispatcher",
    "packages/jobs/discovery_spot_history_processor",
    "packages/jobs/spot_reconciler",
    "packages/migrations/archive_legacy_data",
    "packages/scrapers/forecast_scraper",
    "packages/scrapers/sitemap_scraper",
    "packages/scrapers/taxonomy_scraper",
    "packages/scrapers/spot_scraper",
]

[tool.uv.sources]
cli = { workspace = true }
discovery-catalog-builder = { workspace = true }
discovery-completion = { workspace = true }
discovery-diff = { workspace = true }
forecast-scraper = { workspace = true }
discovery-spot-history-processor = { workspace = true }
sitemap-scraper = { workspace = true }
taxonomy-scraper = { workspace = true }
spot-reconciler = { workspace = true }
spot-scraper = { workspace = true }

[dependency-groups]
dev = [
    "cli",
    "discovery-catalog-builder",
    "discovery-completion",
    "discovery-diff",
    "forecast-scraper",
    "discovery-spot-history-processor",
    "sitemap-scraper",
    "taxonomy-scraper",
    "spot-reconciler",
    "spot-scraper",
    "moto>=5.1.19",
    "pytest>=9.0.2",
    "rich>=14.2.0",
]

[tool.ruff]
line-length = 100 

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
env = [
  "POWERTOOLS_LOG_LEVEL=INFO",
]
python_files = "test_*.py"
