[project]
name = "surf-alerts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = [
    "packages/cli",
    "packages/jobs/discovery_completion",
    "packages/jobs/discovery_run_planner",
    "packages/jobs/discovery_spot_batch_processor",
    "packages/jobs/forecast_run_planner",
    "packages/jobs/forecast_spot_processor",
    "packages/libs/discovery_spot_model",
    "packages/libs/postgres_client",
    "packages/libs/discovery_control",
    "packages/libs/forecast_control",
    "packages/libs/forecast_transform",
    "packages/jobs/dispatcher",
    "packages/jobs/spot_reconciler",
    "packages/migrations/archive_legacy_data",
    "packages/scrapers/forecast_scraper",
    "packages/scrapers/sitemap_scraper",
    "packages/scrapers/taxonomy_scraper",
    "packages/scrapers/spot_scraper",
]

[tool.uv.sources]
cli = { workspace = true }
discovery-control = { workspace = true }
discovery-completion = { workspace = true }
discovery-run-planner = { workspace = true }
discovery-spot-batch-processor = { workspace = true }
discovery-spot-model = { workspace = true }
forecast-control = { workspace = true }
forecast-transform = { workspace = true }
forecast-run-planner = { workspace = true }
forecast-spot-processor = { workspace = true }
postgres-client = { workspace = true }
forecast-scraper = { workspace = true }
sitemap-scraper = { workspace = true }
taxonomy-scraper = { workspace = true }
spot-reconciler = { workspace = true }
spot-scraper = { workspace = true }

[dependency-groups]
dev = [
    "moto>=5.1.19",
    "pytest>=9.0.2",
    "rich>=14.2.0",
]

[tool.ruff]
line-length = 100 
extend-exclude = [
 "infrastructure/cdk.out",
 "packages/jobs/__*",
]

[tool.pytest.ini_options]
testpaths = ["packages"]
norecursedirs = [
  "__*",
  ".git",
  ".venv",
  "node_modules",
]
addopts = "--import-mode=importlib"
python_files = "test_*.py"
